--- a/PythonCode/DSP_lab2.ipynb
+++ b/PythonCode/DSP_lab2.ipynb
@@ -67,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -351,7 +351,15 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "На втором графике можно заметить, что зависимости времени выполнения для *CONV* и *FCONV* от количества элементов в векторе напоминают графики $N^2$ и $N*log(N)$, что и является теоретической оценкой их сложности"
+        "На первом графике при фиксированном размере одного из векторов\n",
+        "видно, что поиск свертки при помощи БПФ, примерно\n",
+        "выполняется за одно и то же время. Это происходит, т.к. в\n",
+        "самом алгоритме мы расшираем векторы до $2max(M, N)$ (где M - длина 1-го вектора, а N - длина 2-го вектора). Поэтому пока мы не\n",
+        "достигли фиксированного значения мы постоянно работаем с\n",
+        "векторами одной длины.\n",
+        "\n",
+        "На втором графике можно заметить, что зависимости времени выполнения для *CONV* и *FCONV* от количества элементов в векторе напоминают графики $N^2$ и $N*log(N)$, что и является теоретической оценкой их сложности\n",
+        "\n"
       ]
     }
   ],
@@ -373,7 +381,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.5"
+      "version": "3.10.13"
     }
   },
   "nbformat": 4,
